@@ -1,16 +1,14 @@
 -----BEGIN PGP SIGNED MESSAGE-----
 Hash: SHA1
 
-DIST rails-4.1.zip 61666 RMD160 b872e5637ec97b303d76f9bf8eee5d3ee9ed151f SHA1 4e3bc9d2b8bec14c0b2bbdee772e97ee0e969d93 SHA256 11c1a8126be7a5dc504c957ebb32f00c689f6bf831911ce2447a61436d1660d3
 DIST rails-4.2.zip 61508 RMD160 7759ef99250c3d914c89b6334b1558833364ffc1 SHA1 bdce1012d590fa148b64671cca0d3bed7dac620f SHA256 74882e4e17ec057ec2d6a601df1005eca57ae60f519d3c546676ec2d521fd768
-EBUILD rails-4.1.ebuild 505 RMD160 fc99d3a5e505295269727bc320480839cda5367b SHA1 c19eb2ac02beb659673f674c47ae3345145c6069 SHA256 203d30ff08c5e999bd57e6d7fc735e5fb5af8a3e2468ae97cd71e640e728f9e2
-EBUILD rails-4.2.ebuild 506 RMD160 bca1f0206082c1c4b0c3220f0f0bd4d439b6d145 SHA1 665d4437bb7f5dfcc6d0373bbe6e03d0c8859464 SHA256 e0f2da13ed542bac16461d11337a86e08aec22e01637990f74df638dab12befc
-MISC ChangeLog 1310 RMD160 a538a66cd5dd736550e7732cda2ecaee01a917c5 SHA1 c3f0a42d3bb2a84182b21272bda38b268af9687c SHA256 53b81ac2db580bf827154745462571a945fde151e7b936f8765edf300b3a529c
+EBUILD rails-4.2.ebuild 505 RMD160 3c8e7e1ab80ba8bb78b1e422d93fb91ecf486f13 SHA1 3444c0ce0de18909358a9b80cbc3e560fb7656ff SHA256 dc17e90c70acfa4bd3e808c83fceaf05b78636c37958727177eba53d055e8fcf
+MISC ChangeLog 1412 RMD160 1b75912bd2f21afd2eb2a13202b51fe5a912032d SHA1 101b856a61abffd0cee423d44df1b3d6984d7b98 SHA256 3a8a6c6e47f8091548272683041c3969ae3b0036d0be1c01c5239e58e0cec91b
 MISC metadata.xml 1012 RMD160 750e9c515b2372b44101988ee8e2972a72056992 SHA1 f295bb28f5ab056c8c5044ca888771fbb179a121 SHA256 08d1b5d8bcc6e846910d10bfcf2324adbb6056621b4bf83c3f50a61d4a7e4e80
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2.0.14 (GNU/Linux)
 
-iEYEARECAAYFAkvGwwcACgkQzJrj3cAXR0ncZwCgle34eGMUKwxd29yOa5BUivHZ
-KyYAn1zRIfgsiW5hu8ATd09lwKZuxfXQ
-=9ugE
+iEYEARECAAYFAkvG3T8ACgkQzJrj3cAXR0msjACeOC15vzgT9YFTS7Jve5e3RH9z
+L1AAoLPi5FuJFfA7trkrYnQ/DFcLi4LO
+=Hryr
 -----END PGP SIGNATURE-----
