@@ -1,4 +1,3 @@
-REM 2010-04-15 *1 +1 UNTIL 2038-01-19 MSG Stabilise x86 app-vim/rails-4.2 %a
 REM 2010-04-19 *1 +1 UNTIL 2038-01-19 MSG Stabilise amd64 media-sound/mpdcron-0.3 %a
 REM 2010-04-19 *1 +1 UNTIL 2038-01-19 MSG Stabilise x86 media-sound/mpdcron-0.3 %a
 REM 2010-04-20 *1 +1 UNTIL 2038-01-19 MSG Stabilise amd64 dev-python/doctest-tools-1.0_alpha3 %a
